# mDNSResponder

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  mDNSResponder.sln
cmake/: dnssd-config.cmake
mDNSShared/: CommonServices.h
